--- a/src/shellcode/linux/ia32/Makefile
+++ b/src/shellcode/linux/ia32/Makefile
@@ -1,5 +1,5 @@
 NASM=nasm
-OBJS=stager_sock_reverse stager_sock_find
+OBJS=stager_sock_bind stager_sock_find stager_sock_reverse 
 
 all: 
 	@for i in ${OBJS}; do echo -n "Building $$i..." && nasm -f bin $$i.asm -o $$i.o && nasm -f elf $$i.asm -o $$i.o.tmp && ld $$i.o.tmp -o $$i && rm -f $$i.o.tmp && xxd -c 16 -ps $$i.o | sed 's/\([0123456789abcdef][0123456789abcdef]\)/\\x\1/g' > $$i.hex && wc -c $$i.o | cut -f 6 -d' '; ndisasm -b 32 $$i.o > $$i.disasm; done
