--- a/src/shellcode/linux/ia32/Makefile
+++ b/src/shellcode/linux/ia32/Makefile
@@ -1,5 +1,5 @@
 NASM=nasm
-STAGERS=stager_sock_bind stager_sock_find stager_sock_reverse 
+STAGERS=stager_sock_bind stager_egghunt stager_sock_find stager_sock_reverse 
 PROVIDERS=provider_tcp_shell provider_udp_shell
 OBJS=${STAGERS} ${PROVIDERS}
 
