--- a/src/shellcode/linux/ia32/Makefile
+++ b/src/shellcode/linux/ia32/Makefile
@@ -1,7 +1,8 @@
 NASM=nasm
 STAGERS=stager_sock_bind stager_egghunt stager_sock_find stager_sock_reverse 
 STAGES=stage_tcp_shell stage_udp_shell
-OBJS=${STAGERS} ${STAGES}
+SINGLE=single_bind_tcp_shell single_find_tcp_shell single_reverse_tcp_shell
+OBJS=${STAGERS} ${STAGES} ${SINGLE}
 
 include ../../Makefile.incl
 
