crappy find tag stager for bsd

--- a/src/shellcode/bsd/ia32/Makefile
+++ b/src/shellcode/bsd/ia32/Makefile
@@ -1,5 +1,5 @@
 NASM=nasm
-STAGERS=stager_sock_bind stager_sock_reverse
+STAGERS=stager_sock_bind stager_sock_find stager_sock_reverse
 STAGES=
 SINGLE=
 OBJS=${STAGERS} ${STAGES} ${SINGLE}
