--- a/src/shellcode/bsd/ia32/Makefile
+++ b/src/shellcode/bsd/ia32/Makefile
@@ -1,7 +1,7 @@
 NASM=nasm
 STAGERS=stager_sock_bind stager_sock_find stager_sock_reverse
 STAGES=
-SINGLE=single_exec
+SINGLE=single_exec single_reverse_libinject single_findsock
 OBJS=${STAGERS} ${STAGES} ${SINGLE}
 
 include ../../Makefile.incl
