--- a/src/shellcode/Makefile
+++ b/src/shellcode/Makefile
@@ -2,3 +2,6 @@ MODS=linux/ia32 bsd/ia32
 
 all:
 	for i in ${MODS}; do cd $$i && make && cd ../.. ; done
+
+clean:
+	for i in ${MODS}; do cd $$i && make clean && cd ../.. ; done
