Brign Makefile up to current standards

--- a/src/shellcode/bsdi/ia32/Makefile
+++ b/src/shellcode/bsdi/ia32/Makefile
@@ -1,6 +1,8 @@
 NASM=nasm
 STAGERS=stager_sock_bind stager_sock_find stager_sock_reverse 
-OBJS=${STAGERS} ${PROVIDERS}
+STAGES=
+SINGLE=
+OBJS=${STAGERS} ${STAGES} ${SINGLE}
 
 include ../../Makefile.incl
 
